# myx-grad

./: .clang-format  .clang-tidy  .gitignore  conanfile.py  graph.dot  graph1.dot  graph2.dot  graph3.dot  meson.build
doc/: dispatch-strategy.md  memory-management-evolution.md  mlp-improvements.md
doc/pictures/: graph1.dot  graph_4.dot  graph_requires_grad.dot
include/myx_grad/: arena.h  engine.h  nn.h
src/: arena.cpp  main.cpp  myx_grad.cpp  myx_grad.h
test_package/: conanfile.py
tests/: test1.cpp
